--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,12 @@ django-crispy-forms==1.13.0
 idna==3.3
 numpy==1.21.4
 pandas==1.3.4
+plotly==5.3.1
 python-dateutil==2.8.2
 pytz==2021.3
 requests==2.26.0
 six==1.16.0
 sqlparse==0.4.2
+tenacity==8.0.1
 typing-extensions==3.10.0.2
 urllib3==1.26.7
